src/objects/Callcentre_Gender__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Female_Callers__c</fullName>
        <label>Female Callers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Callers__c</fullName>
        <label>Male Callers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Callcentre Gender</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Callcentre Gender Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callcentre Genders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>